--- a/safecopy.cabal
+++ b/safecopy.cabal
@@ -67,3 +67,10 @@ Test-suite instances
   Build-depends:       base, cereal, template-haskell, safecopy,
                        containers, time, array, vector, lens >= 4.7 && < 5.0,
                        lens-action, tasty, tasty-quickcheck, quickcheck-instances, QuickCheck
+
+Test-suite generic
+  Type:                exitcode-stdio-1.0
+  Main-is:             generic.hs
+  Hs-Source-Dirs:      test/
+  GHC-Options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+  Build-depends:       base, cereal, safecopy, HUnit
