--- a/safecopy.cabal
+++ b/safecopy.cabal
@@ -35,6 +35,7 @@ Library
                        cereal >= 0.5 && < 0.6,
                        bytestring < 0.11,
                        containers >= 0.3 && < 0.7,
+                       generic-data >= 0.3,
                        old-time < 1.2,
                        template-haskell < 2.15,
                        text < 1.3,
