--- a/safecopy.cabal
+++ b/safecopy.cabal
@@ -74,4 +74,5 @@ Test-suite generic
   Main-is:             generic.hs
   Hs-Source-Dirs:      test/
   GHC-Options:         -Wall -threaded -rtsopts -with-rtsopts=-N
-  Build-depends:       base, bytestring, cereal, safecopy, HUnit
+  Build-depends:       base, bytestring, cereal, safecopy, HUnit, uuid, uuid-orphans
+
