--- a/safecopy.cabal
+++ b/safecopy.cabal
@@ -40,6 +40,7 @@ Library
                        template-haskell < 2.15,
                        text < 1.3,
                        time < 1.10,
+                       transformers < 0.6,
                        vector >= 0.10 && < 0.13
 
   if !impl(ghc > 8.0)
